k8s/bfs_dfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bfs-dfs
  namespace: dsa-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bfs-dfs
  template:
    metadata:
      labels:
        app: bfs-dfs
    spec:
      containers:
        - name: bfs-dfs
          image: rahulsivakumar/bfs_dfs:latest
          ports:
            - containerPort: 8501

---

apiVersion: v1
kind: Service
metadata:
  name: bfs-dfs
  namespace: dsa-lab
spec:
  selector:
    app: bfs-dfs
  ports:
    - port: 80
      targetPort: 8501
