k8s/code_exec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-exec
  namespace: dsa-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-exec
  template:
    metadata:
      labels:
        app: code-exec
    spec:
      containers:
        - name: code-exec
          image: rahulsivakumar/code_exec:latest
          ports:
            - containerPort: 8501

---

apiVersion: v1
kind: Service
metadata:
  name: code-exec
  namespace: dsa-lab
spec:
  selector:
    app: code-exec
  ports:
    - port: 80
      targetPort: 8501
