k8s/dij_fl-w.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dij-flw
  namespace: dsa-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dij-flw
  template:
    metadata:
      labels:
        app: dij-flw
    spec:
      containers:
        - name: dij-flw
          image: rahulsivakumar/dij_fl-w:latest
          ports:
            - containerPort: 8501

---

apiVersion: v1
kind: Service
metadata:
  name: dij-flw
  namespace: dsa-lab
spec:
  selector:
    app: dij-flw
  ports:
    - port: 80
      targetPort: 8501
