k8s/landing_page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: dsa-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          image: rahulsivakumar/landing_page:latest
          ports:
            - containerPort: 8501
---

apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
  namespace: dsa-lab
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
