k8s/problem_repo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problem-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: problem-repo
  template:
    metadata:
      labels:
        app: problem-repo
    spec:
      containers:
        - name: problem-repo
          image: rahulsivakumar/problem_repo:latest
          ports:
            - containerPort: 8501

apiVersion: v1
kind: Service
metadata:
  name: problem-repo
spec:
  selector:
    app: problem-repo
  ports:
    - port: 80
      targetPort: 8501
