k8s/sorting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sorting
  namespace: dsa-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sorting
  template:
    metadata:
      labels:
        app: sorting
    spec:
      containers:
        - name: sorting
          image: rahulsivakumar/sorting:latest
          ports:
            - containerPort: 8501

---

apiVersion: v1
kind: Service
metadata:
  name: sorting
  namespace: dsa-lab
spec:
  selector:
    app: sorting
  ports:
    - port: 80
      targetPort: 8501
